Fri Jan 27 11:00:43 CET 2012
	Fixed postprocessor failure for applications that enclosed boundary
	in quotes (#2120). -woof

Tue Jan 24 16:07:53 CET 2012
	Added configure check for sin_len in 'struct sockaddr' and adding
	code to initialize this field if it exists now. -CG

Mon Jan 23 14:02:26 CET 2012
	Fixed double-free if specified cipher was not valid (during
	MHD_daemon_start).  Releasing 0.9.18. -CG

Thu Jan 19 22:11:12 CET 2012
	Switch to non-blocking sockets for all systems but Cygwin
	(we already used non-blocking sockets for GNU/Linux); also
	use non-blocking sockets on Cygwin for HTTPS as this is
	required to avoid DoS-by-partial-record via gnutls.  On
	Cygwin, #1824 implies that we need to use blocking sockets
	for HTTP on Cygwin for now. -CG

Thu Jan 19 17:46:05 CET 2012
	Fixing use of uninitialized 'earliest_deadline' variable in
	MHD_get_timeout which can lead to returning an incorrect
	(too early) timeout (#2085). -tclaveirole

Thu Jan 19 13:31:27 CET 2012
	Fixing digest authentication for GET requests with URI arguments
	(#2059). -CG

Sat Jan  7 17:30:48 CET 2012
	Digest authentication expects nonce count in base 16, not base 10
	(#2061). -tclaveirole

Thu Jan  5 22:01:37 CET 2012
	Partial fix for #2059, digest authentication with GET arguments. -CG

Thu Dec  1 15:22:57 CET 2011
	Updated authorization_example.c to actually demonstrate the current
	MHD API. -SG

Mon Nov 21 18:51:30 CET 2011
	Added option to suppress generation of the 'Date:' header to be
	used on embedded systems without RTC.  Documented the new option
	and the configure options. -CG

Sat Nov 19 20:08:40 CET 2011
	Releasing 0.9.17. -CG

Fri Nov 18 20:17:22 CET 2011
	Fixing return value of MHD_get_timeout if timeouts are not in use.
        (#1914). -rboulton

Sun Nov 13 13:34:29 CET 2011
	Trying to fix accidental addition of a "Connection: close" footer
	under certain (rare) circumstances. -CG

Fri Nov  4 10:03:00 CET 2011
	Small updates to the tutorial.
	Releasing 0.9.16. -CG
