@@ -1,3 +1,7 @@
+Mon Jan 30 20:02:34 CET 2012
+	Fixed handling of garbage prior to first multipart boundary
+	(#2126). -woof
+
 Fri Jan 27 11:00:43 CET 2012
 	Fixed postprocessor failure for applications that enclosed boundary
 	in quotes (#2120). -woof
